...
  candidate(
    id: 'candidate',
    trName: 'Usta Adayı',
    enName: 'Candidate Master',
    approximateElo: 1800,
  ),
  expert(id: 'expert', trName: 'Uzman', enName: 'Expert', approximateElo: 2100),
  master(
    id: 'master',
    trName: 'Ulusal Usta',
    enName: 'National Master',
    approximateElo: 2400,
  ),
...
